--- a/src/app/components/liste-gr/liste-gr.component.html
+++ b/src/app/components/liste-gr/liste-gr.component.html
@@ -17,7 +17,7 @@
 
 
 
-  <div class="row titre-liste-gr ps-2 pt-2 pb-2 mb-3 mt-2">{{ 'page.liste_gr.text.personne_gr' | translate }}</div>
+  <div class="row titre-liste-gr ps-2 pt-2 pb-2 mb-3 mt-2">{{ 'page.liste_gr.text.liste_gr' | translate }}</div>
 
   <table class="table table-striped mb-3">
     <thead>
