--- a/src/app/components/details-event/details-event.component.html
+++ b/src/app/components/details-event/details-event.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-2  mt-3">
-      <button class="btn bouton-retour" (click)="back()"><i class="bi bi-chevron-left"></i> Retour</button>
+      <button class="btn bouton-retour" (click)="back()"><i class="bi bi-chevron-left"></i> {{ 'common.retour' | translate }} </button>
     </div>
     <div class="col-10">
       <app-titre [libelle]="event.libelle + ' ('+ event.date_evenement +') ' "></app-titre>
