--- a/src/app/components/liste-personne-by-gr/liste-personne-by-gr.component.html
+++ b/src/app/components/liste-personne-by-gr/liste-personne-by-gr.component.html
@@ -32,13 +32,13 @@
       <div class="col-3"> {{ 'page.liste_personnes.total' | translate }} : <span
           [ngStyle]="{'color': secondaryColor }">{{ gr.personnes.length}}</span></div>
       <div class="col-3">
-        {{ 'page.liste_personnes.regulier' | translate }} : <span [ngStyle]="{'color': secondaryColor }"> {{gr.regulier}} </span>
+        {{ 'page.liste_personnes.regulier' | translate }} : <span [ngStyle]="{'color': secondaryColor }"> {{nombreRegulier(gr.personnes)}} </span>
       </div>
       <div class="col-3">
-        {{ 'page.liste_personnes.fidelisation' | translate }} : <span [ngStyle]="{'color': secondaryColor }"> {{gr.fidelisation}}</span>
+        {{ 'page.liste_personnes.fidelisation' | translate }} : <span [ngStyle]="{'color': secondaryColor }"> {{ nombreIntegration(gr.personnes)}}</span>
       </div>
       <div class="col-3">
-        {{ 'page.liste_personnes.irregulier' | translate }} : <span [ngStyle]="{'color': secondaryColor }">{{ gr.irregulier }}</span>
+        {{ 'page.liste_personnes.irregulier' | translate }} : <span [ngStyle]="{'color': secondaryColor }">{{  nombreIrregulier(gr.personnes) }}</span>
       </div>
     </div>
     <hr />
@@ -48,8 +48,7 @@
         <tr [ngStyle]="{'color': secondaryColor }">
           <th scope="col">#</th>
           <th scope="col">{{ "page.liste_personnes.tableau.entete.nom" | translate }}</th>
-          <th scope="col">{{ "page.liste_personnes.tableau.entete.prenom" | translate }}</th>
-          <th scope="col">{{ "page.liste_personnes.tableau.entete.gr" | translate }}</th>
+          <th scope="col">{{ "page.liste_personnes.tableau.entete.ville" | translate }}</th>
           <th scope="col">{{ "page.liste_personnes.tableau.entete.status" | translate }}</th>
           <!--Couleur de fond Rouge: pas régulier, orange: en cours de fidélisation/ pas regulier-->
           <th scope="col">{{ "page.liste_personnes.tableau.entete.action" | translate }}</th>
@@ -58,9 +57,8 @@
       <tbody>
         <tr *ngFor="let personne of gr.personnes; let numero = index">
           <th scope="row">{{ numero + 1 }}</th>
-          <td> {{ personne.nom }} </td>
-          <td> {{ personne.prenom }} </td>
-          <td> {{ personne.gr.libelle }} </td>
+          <td> {{ personne.prenom + ' '+ personne.nom }} </td>
+          <td> {{ personne.ville }} </td>
           <td> {{ 'page.liste_personnes.status.'+personne.status | translate }}</td>
           <td>
             <i class="bi bi-card-text details" title="{{ 'page.liste_personnes.info.afficher_details' | translate }}"
