--- a/src/app/components/reunion-gr/reunion-gr.component.html
+++ b/src/app/components/reunion-gr/reunion-gr.component.html
@@ -24,25 +24,28 @@
 
 
 
+
   <table class="table table-striped">
     <thead>
       <tr [ngStyle]="{'color': secondaryColor }">
         <th scope="col">#</th>
-        <th scope="col">{{ "page.reunion.semaine" | translate }}</th>
+        <th scope="col">{{ "page.reunion.date" | translate }}</th>
+        <th scope="col">{{ "page.reunion.gr" | translate }}</th>
         <th scope="col">{{ "page.reunion.message" | translate }}</th>
-        <th scope="col">{{ "page.reunion.annonce" | translate }}</th>
+        <th scope="col">{{ "page.reunion.status_libelle" | translate }}</th>
         <th scope="col">{{ "page.reunion.action" | translate }}</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let reunion of reunionsRecherches; let numero = index">
+      <tr *ngFor="let reunion of reunionsRecherches; let numero = index" [title]="('page.reunion.annonce' | translate) + ':\n'+ reunion.annonce">
         <th scope="row">{{ numero + 1 }}</th>
-        <td> {{ reunion.semaine }} </td>
+        <td> {{ reunion.date }} ({{ reunion.semaine }}) </td>
+        <td> {{ reunion.gr_libelle }} </td>
         <td> {{ reunion.titre }} </td>
-        <td> {{ reunion.annonce }} </td>
+        <td> {{ (reunion.valide ? 'page.reunion.status.valide' : 'page.reunion.status.en_cours') |translate }} </td>
         <td>
           <i class="bi bi-card-text details" title="{{ 'page.events.info.afficher_details' | translate }}"
-            (click)="details(event.id)"> {{ 'page.events.details' | translate }}</i>
+            (click)="details(reunion.id)"> {{ 'page.events.details' | translate }}</i>
         </td>
       </tr>
 
