--- a/src/app/components/details-personne/details-personne.component.html
+++ b/src/app/components/details-personne/details-personne.component.html
@@ -40,6 +40,14 @@
             <td class="value-person"> {{ personne.gr.libelle }} </td>
           </tr>
           <tr>
+            <td> {{ "page.liste_personnes.tableau.entete.ville" | translate }} </td>
+            <td class="value-person"> {{ personne.ville }} </td>
+          </tr>
+          <tr>
+            <td> {{ "page.liste_personnes.tableau.entete.pays" | translate }} </td>
+            <td class="value-person"> {{ personne.pays }} </td>
+          </tr>
+          <tr>
             <td> {{ "page.add_personne.date_ajout" | translate }} </td>
             <td class="value-person"> {{ personne.date_ajout }} </td>
           </tr>
