--- a/src/app/components/details-event/details-event.component.html
+++ b/src/app/components/details-event/details-event.component.html
@@ -11,10 +11,10 @@
 
   <div class="row mt-5">
     <div class="col-3"> {{ 'page.details_event.personne_presente' | translate }} : <span
-        [ngStyle]="{'color': secondaryColor }">{{ personneAssistes.length }}</span>
+        [ngStyle]="{'color': secondaryColor }">{{ personneAssistes.length + toutPersonneInvite.length }}</span>
     </div>
     <div class="col-3"> {{ 'page.details_event.personne_absente' | translate }} : <span
-        [ngStyle]="{'color': secondaryColor }"> {{ personneNonAssistes.length }}</span>
+        [ngStyle]="{'color': secondaryColor }"> {{ personneNonAssistes.length + toutPersonneInviteAbsent.length }}</span>
     </div>
 
     <div class="col-3"> </div>
@@ -61,7 +61,7 @@
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
               aria-expanded="true" aria-controls="collapseOne">
-              {{ 'page.details_event.personne_presente' | translate }} ({{personneAssistesRecherche.length}})
+              {{ 'page.details_event.personne_presente' | translate }} ({{ personneAssistesRecherche.length + personnesInviteRecherche.length}})
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
@@ -75,11 +75,19 @@
                 </div>
               </div>
 
-              <table class="table table-striped" *ngIf="personneAssistes.length > 0">
+              <table class="table table-striped" *ngIf="personneAssistesRecherche.length > 0 || personnesInviteRecherche.length > 0">
                 <tbody>
                   <tr *ngFor="let personne of personneAssistesRecherche">
                     <td>
                       <span> {{ personne.prenom + ' '+ personne.nom }} </span>
+                      <small class="gr-libelle">{{ personne.gr.libelle }}</small>
+
+                    </td>
+                  </tr>
+
+                  <tr *ngFor="let personne of personnesInviteRecherche">
+                    <td>
+                      <span> {{ personne.nom }} </span>
                       <small class="gr-libelle">{{ personne.gr.libelle }}</small>
 
                     </td>
@@ -95,13 +103,14 @@
           </div>
         </div>
 
+
         <br />
 
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              {{ 'page.details_event.personne_absente' | translate }} ({{personneNonAssistesRecherche.length}})
+              {{ 'page.details_event.personne_absente' | translate }} ({{personneNonAssistesRecherche.length + personnesInviteAbsentRecherche.length}})
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -123,6 +132,13 @@
                       <small class="gr-libelle">{{ personne.gr.libelle }}</small>
                     </td>
                   </tr>
+
+                  <tr *ngFor="let personne of personnesInviteAbsentRecherche">
+                    <td>
+                      <span> {{ personne.nom }} </span>
+                      <small class="gr-libelle">{{ personne.gr.libelle }}</small>
+                    </td>
+                  </tr>
                 </tbody>
               </table>
               <div class="text-center fst-italic" *ngIf="personneNonAssistes.length == 0"> {{
@@ -133,49 +149,32 @@
         </div>
 
         <br />
-
-        <!-- <div class="accordion-item">
-          <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              {{ 'page.detail_personne.evenemement_absent' | translate }}
-            </button>
-          </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-            data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-
-              <table class="table table-striped" *ngIf="evenementNonAssistes.length > 0">
-                <tbody>
-                  <tr *ngFor="let evenementNonAssiste of evenementNonAssistes">
-                    <td>
-                      <small class="date_libelle">{{ evenementNonAssiste.date_evenement }}</small>
-                      <span>{{ evenementNonAssiste.libelle }} </span>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-
-              <div class="text-center fst-italic" *ngIf="evenementNonAssistes.length == 0"> {{
-                'page.detail_personne.aucun_suivi' | translate}} </div>
-
-            </div>
-          </div>
-        </div> -->
-      </div>
-
-      <hr>
-
-
+        <app-participant [invites]="personnesInvite" [personnes]="personneGr" (changerPresence)="changerPresence($event)"></app-participant>
 
 
       </div>
+
+
+    </div>
     </div>
   </div>
 
+  <div class="alert alert-success alert-dismissible mt-2" *ngIf="!error && saved">
+    {{ 'common.saved_success_message' | translate }}
+  </div>
 
+  <div class="alert alert-success alert-dismissible mt-2" *ngIf="!error && validated">
+    {{ 'common.valider_success_message' | translate }}
+  </div>
 
-  <app-rapport (generer)="genererRapport()" [rapport]="rapport"></app-rapport>
+  <div class="alert alert-danger alert-dismissible mt-2" *ngIf="error">
+    {{ 'common.error_message' | translate }}
+  </div>
+
+  <button class="btn btn-secondary me-2 mt-2" (click)="enregistrerParticipant()">{{ 'common.enregistrer' | translate }}</button>
+  <hr>
+  <!-- <button class="btn btn-light bouton-light" (click)="back()">{{ 'common.annuler' | translate }}</button> -->
+  <app-rapport (generer)="genererRapport()" [rapport]="rapport" [buttonLibelle]="'afficher_rapport'"></app-rapport>
 
 
 </div>
