--- a/src/app/components/rapport/rapport.component.html
+++ b/src/app/components/rapport/rapport.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container"> -->
   <div class="mb-2">
     <button (click)="generate()" type="submit" class="btn btn-secondary mb-2 ">{{
       'common.'+buttonLibelle | translate }}
@@ -7,7 +7,7 @@
 
   </div>
 
-  <div class="row" *ngIf="rapportMode">
+  <div class="row mb-3" *ngIf="rapportMode">
     <div>
       <button *ngIf="!estCopie" (click)="copier()" type="submit" class="btn btn-light bouton-copier me-2">{{
         'common.copier' | translate }}
@@ -26,6 +26,6 @@
       placeholder="{{ 'common.rapport' | translate }}">
     </textarea>
   </div>
-</div>
+<!-- </div> -->
 
 
