--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,16 +9,16 @@
 <body class="preload">
   <header class="header row" [ngStyle]="{'background': backgroundColor, 'color':'white'}">
 
-    <div class="col-6">
-      <button class="header__button" id="btnNav" type="button" (click)="showMenu()" *ngIf="userExiste">
+    <div class="col-6" *ngIf="userExiste">
+      <button class="header__button" id="btnNav" type="button" (click)="showMenu()" >
         <i class="material-icons">menu</i>
       </button>
 
-      <button class="header__button mr-sm-2 hover-gris" type="button" [ngClass]="{'ms-5': !userExiste }" (click)="cliquerNomReseau()">
+      <button class="header__button mr-sm-2 hover-gris" type="button" [ngClass]="{'ms-5': !userExiste }" (click)="cliquerNomReseau()" >
         {{ nomReseau | uppercase }}
       </button>
     </div>
-    <div class="col-6">
+    <div class="col-6" *ngIf="userExiste">
       <div class="d-flex flex-row-reverse">
         <span class="user-setup hover-gris">
           <i class="material-icons account mt-2 me-2">account_circle</i>
@@ -47,7 +47,14 @@
         {{'menu.liste_gr' | translate}}
       </a> -->
 
-      <a [routerLink]="menuItem.class" *ngFor="let menuItem of menuItems" href="#" class="nav__link" (click)="closeMenu(menuItem.class)" [ngClass]="{ 'nav__link--active': menuItem.class === menuActive }" [ngStyle]="{color: menuItem.class === menuActive? secondaryColor : ''}">
+      <a
+      [routerLink]="menuItem.class"
+      *ngFor="let menuItem of menuItemsAutorises"
+      href="#"
+      class="nav__link"
+      (click)="closeMenu(menuItem.class)"
+      [ngClass]="{ 'nav__link--active': menuItem.class === menuActive }"
+      [ngStyle]="{color: menuItem.class === menuActive? secondaryColor : ''}">
         <i class="material-icons">{{menuItem.icone}}</i>
         {{ menuItem.libelle | translate}}
       </a>
