--- a/src/app/components/details-gr/details-gr.component.scss
+++ b/src/app/components/details-gr/details-gr.component.scss
@@ -6,3 +6,12 @@
 .details {
   cursor: pointer;
 }
+
+.bouton-definir-responsable {
+  border-color: grey;
+}
+
+.bouton-border-gris {
+  border-color: grey;
+}
+
