--- a/src/app/components/add-reunion/add-reunion.component.html
+++ b/src/app/components/add-reunion/add-reunion.component.html
@@ -119,7 +119,7 @@
   </div>
 
   <div class="mt-5 mb-5">
-    <app-rapport [rapport]="rapport" (generer)="genererRapport()"></app-rapport>
+    <app-rapport [rapport]="rapport" (generer)="genererRapport()" (textChanged)="setRapport($event)"></app-rapport>
   </div>
 </div>
 
