--- a/src/app/components/details-gr/details-gr.component.html
+++ b/src/app/components/details-gr/details-gr.component.html
@@ -11,6 +11,7 @@
 
 
   <hr />
+
   <div class="row mt-5">
     <div class="col-3"> {{ 'page.liste_personnes.total' | translate }} : <span [ngStyle]="{'color': secondaryColor }">{{
         personnesGR.length}}</span></div>
@@ -21,8 +22,23 @@
     <div class="col-3"> {{ 'page.liste_personnes.irregulier' | translate }} : <span
         [ngStyle]="{'color': secondaryColor }">{{ nombreIrregulier }}</span></div>
   </div>
+
   <hr />
 
+  <div class="row">
+    <div class="col-6">
+      <button class="btn btn-light bouton-border-gris">{{ 'page.details_gr.definir_responsable' | translate }}</button>
+    </div>
+    <div class="col-6 d-flex flex-row-reverse">
+      <div *ngIf="suppressionEnCours">
+        <button class="btn btn-light bouton-border-gris" (click)="suppressionEnCours = false">{{ 'page.details_gr.annuler_fermeture' | translate }}</button>
+        <button class="btn btn-danger ms-3" (click)="fermerGr()">{{ 'page.details_gr.confirmer_fermeture' | translate }}</button>
+      </div>
+      <button *ngIf="!suppressionEnCours" class="btn btn-danger" (click)="suppressionEnCours = true">{{ 'page.details_gr.fermer_gr' | translate }}</button>
+    </div>
+  </div>
+
+  <hr />
 
 
 
@@ -53,7 +69,10 @@
         <td> {{ personne.nom }} </td>
         <td> {{ personne.prenom }} </td>
         <td> {{ personne.ville }} </td>
-        <td> {{ 'page.liste_personnes.status.'+personne.status | translate }}</td>
+        <td>
+          {{ 'page.liste_personnes.status.'+personne.status | translate }}
+          <button *ngIf="personne.status !== statusResponsable"><i class="bi bi-arrow-up-circle-fill"></i></button>
+        </td>
         <td>
           <button>
             <i class="bi bi-card-text details" title="{{ 'page.liste_personnes.info.afficher_details' | translate }}"
@@ -65,7 +84,6 @@
           </button>
         </td>
       </tr>
-
     </tbody>
   </table>
 
@@ -111,6 +129,51 @@
     </tbody>
   </table>
 
-
-
 </div>
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="definir-participant" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalLabel">{{ 'page.details_gr.definir_responsable' | translate }}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Modal
+<div class="modal fade" id="fermer-gr" tabindex="-1" role="dialog" aria-labelledby="fermer-gr-modalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="fermer-gr-modalLabel">Êtes vous sûr de vouloir fermer</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div> -->
+
